--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
       font-size: 0.9rem;
       color: #9ca3af;
       text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
     }
 
     footer a {
@@ -168,6 +172,28 @@
 
     footer a:hover {
       color: #2563eb;
+    }
+
+    .github-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: transform 0.3s ease;
+    }
+
+    .github-link:hover {
+      transform: translateY(-2px);
+    }
+
+    .github-link svg {
+      width: 18px;
+      height: 18px;
+      fill: #3b82f6;
+      transition: fill 0.3s ease;
+    }
+
+    .github-link:hover svg {
+      fill: #2563eb;
     }
 
     @media (max-width: 600px) {
@@ -182,6 +208,10 @@
       }
       pre {
         font-size: 0.85rem;
+      }
+      footer {
+        flex-direction: column;
+        gap: 10px;
       }
     }
   </style>
@@ -224,7 +254,13 @@ fetch('https://your-domain/https-proxy/api.example.com/v1/endpoint', {
       </div>
 
       <footer>
-        © 2025 API Proxy Hub - Powered by <a href="https://github.com/CoralDing/API-Proxy-Hub">Coralding</a>
+        <span>© 2025 API Proxy Hub - Powered by Coralding</span>
+        <a href="https://github.com/CoralDing/API-Proxy-Hub" target="_blank" class="github-link">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 0C5.373 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387.6.111.793-.261.793-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.614-4.042-1.614-.222-.556-.99-1.398-1.695-1.677-.576-.237-1.398-.793-.015-1.398.66-.015 1.13.6 1.29 1.05.378.99.915 1.665 1.515 2.04.465.285.99.555 1.5.555.015-.645.015-1.29.015-1.935 0-.465-.165-.915-.435-1.23-1.485-.66-3.045-3.315-3.045-6.375 0-1.41.51-2.565 1.35-3.465-.135-.33-.585-1.65.135-3.435 0 0 1.095-.345 3.585 1.35a12.435 12.435 0 0 1 3.27-.435c1.11.015 2.235.165 3.27.435 2.49-1.695 3.585-1.35 3.585-1.35.72 1.785.27 3.105.135 3.435.84.9 1.35 2.055 1.35 3.465 0 3.075-1.56 5.715-3.06 6.375-.27.315-.435.765-.435 1.23 0 .645 0 1.29.015 1.935.51 0 1.035-.27 1.5-.555.6-.375 1.14-1.05 1.515-2.04.165-.45.66-1.035 1.29-1.05.585.6-.135 1.155-1.695 1.398-.705.27-1.47 1.125-1.695 1.677 0 0-3.705.885-4.042 1.614-.005.99-.015 1.755-.015 2.04 0 .315.195.69.795.577C20.565 21.8 24 17.302 24 12c0-6.627-5.373-12-12-12z"/>
+          </svg>
+          GitHub
+        </a>
       </footer>
     </div>
   </div>
